Fixed bug for adding new doctor.

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <form action="/api/createDoctor" method="post">
+  <form action="/diabetes/api/createDoctor" method="post">
     <label for="male">First Name:</label>
     <input type="text" name="firstName" required><br>
 
