Minor bug fix for doctor form

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <form action="/api/createDoctor" method="post">
+  <form action="/diabetes/api/createDoctor" method="post">
     <label for="male">First Name:</label>
     <input type="text" name="firstName" required><br>
 
@@ -36,7 +36,7 @@
     <input type="submit" value="Submit">
   </form>
 
-  <script src="js/scripts.js"></script>
+  <!-- <script src="js/scripts.js"></script> -->
 </body>
 
 </html>
