Complete adding doctor as records admin

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <form action="/diabetes/api/createDoctor" method="post">
+  <form action="/api/createDoctor" method="post">
     <label for="male">First Name:</label>
     <input type="text" name="firstName" required><br>
 
@@ -29,9 +29,6 @@
 
     <label for="male">Username:</label>
     <input type="text" name="username" required><br>
-
-    <label for="male">Password:</label>
-    <input type="text" name="password" required><br>
 
     <input type="submit" value="Submit">
   </form>
