--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -11,29 +11,14 @@
 </head>
 
 <body>
-  <form action="/api/createDoctor" method="post">
-    <label for="male">First Name:</label>
-    <input type="text" name="firstName" required><br>
+  <input type="text" id="email" name="email" placeholder="Email" />
+  <input type="password" id="password" name="password" placeholder="Password" />
+  <button disabled id="sign-in" name="signin">Sign In</button>
 
-    <label for="male">Last Name:</label>
-    <input type="text" name="lastName" required><br>
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
 
-    <label for="male">License Number:</label>
-    <input type="text" name="licenseNumber" required><br>
-
-    <label for="male">Clinic ID:</label>
-    <input type="text" name="clinicID" required><br>
-
-    <label for="male">Email Address:</label>
-    <input type="text" name="email" required><br>
-
-    <label for="male">Username:</label>
-    <input type="text" name="username" required><br>
-
-    <input type="submit" value="Submit">
-  </form>
-
-  <!-- <script src="js/scripts.js"></script> -->
+  <script type="text/javascript" src="/script.js"></script>
 </body>
 
 </html>
