--- a/backend/src/private/addDoctorToClinic.html
+++ b/backend/src/private/addDoctorToClinic.html
@@ -3,32 +3,13 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Create a Doctor Account</title>
-    <meta name="description" content="Creating an account for a doctor." />
+    <title>Add doctor to clinic</title>
+    <meta name="description" content="Add doctor to clinic." />
 
     <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
   </head>
 
   <body>
-    <form action="/api/createDoctor" method="post">
-      <label for="male">First Name:</label>
-      <input type="text" name="firstName" required /><br />
-
-      <label for="male">Last Name:</label>
-      <input type="text" name="lastName" required /><br />
-
-      <label for="male">License Number:</label>
-      <input type="text" name="licenseNumber" required /><br />
-
-      <label for="male">Email Address:</label>
-      <input type="text" name="email" required /><br />
-
-      <label for="male">Username:</label>
-      <input type="text" name="username" required /><br />
-
-      <input disabled type="submit" id="doctor-sign-up" value="Submit" />
-    </form>
-
     <form action="/api/addDoctorToClinic" method="post">
       <label for="male">clinicID:</label>
       <input type="text" name="clinicID" required /><br />
@@ -36,7 +17,7 @@
       <label for="male">doctorID:</label>
       <input type="text" name="doctorID" required /><br />
 
-      <input type="submit" value="Submit" />
+      <input disabled type="submit" id="doctor-sign-up" value="Submit" />
     </form>
 
     <div class="quickstart-user-details-container">
@@ -53,5 +34,5 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 
-  <script type="text/javascript" src="/script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </html>
