--- a/backend/src/private/login.html
+++ b/backend/src/private/login.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
     <title>Create a Doctor Account</title>
-    <meta name="description" content="Creating an account for a doctor.">
+    <meta name="description" content="Creating an account for a doctor." />
 
     <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
-</head>
+  </head>
 
-<body>
+  <body>
     <input type="text" id="email" name="email" placeholder="Email" />
-    <input type="password" id="password" name="password" placeholder="Password" />
+    <input
+      type="password"
+      id="password"
+      name="password"
+      placeholder="Password"
+    />
     <button id="sign-in" name="signin">Sign In</button>
 
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
@@ -20,7 +24,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <script type="text/javascript" src="/script.js"></script>
-</body>
-
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
