--- a/backend/src/private/addDoctorToClinic.html
+++ b/backend/src/private/addDoctorToClinic.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
 
-    <title>Add doctor to clinic</title>
-    <meta name="description" content="Add doctor to clinic." />
+<head>
+  <meta charset="utf-8" />
 
-    <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
-  </head>
+  <title>Add doctor to clinic</title>
+  <meta name="description" content="Add doctor to clinic." />
 
-  <body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="/style.css">
+</head>
+
+<body>
+  <div id="body-wrap">
     <form action="/api/addDoctorToClinic" method="post">
-      <label for="male">clinicID:</label>
+      <label for="male">Clinic ID:</label>
       <input type="text" name="clinicID" required /><br />
 
-      <label for="male">doctorID:</label>
+      <label for="male">Doctor ID:</label>
       <input type="text" name="doctorID" required /><br />
 
-      <input disabled type="submit" id="doctor-sign-up" value="Submit" />
+      <input disabled type="submit" id="action-submit" value="Submit" />
     </form>
 
-    <div class="quickstart-user-details-container">
-      <button id="sign-out" name="signout">Sign Out</button>
+    <!-- Firebase Debug -->
+
+    <button id="sign-out" name="signout">Sign Out</button>
+
+    <div hidden class="quickstart-user-details-container">
       Firebase sign-in status: <span id="sign-in-status">Unknown</span>
     </div>
 
-    <div>Firebase auth <code>currentUser</code> object value:</div>
-    <pre><code id="quickstart-account-details">null</code></pre>
+    <div hidden>Firebase auth <code>currentUser</code> object value:
+      <pre><code id="quickstart-account-details">null</code></pre>
+    </div>
+  </div>
 
-    <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   <script type="text/javascript" src="script.js"></script>
+</body>
+
 </html>
