--- a/backend/src/private/clinicSignup.html
+++ b/backend/src/private/clinicSignup.html
@@ -7,34 +7,39 @@
     <title>Create a Doctor Account</title>
     <meta name="description" content="Creating an account for a doctor.">
 
-    <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <form action="/api/createClinic" method="post">
-        <label for="male">Clinic Name:</label>
-        <input type="text" name="clinicName" required><br>
+    <div id="body-wrap">
+        <form action="/api/createClinic" method="post">
+            <label for="male">Clinic Name:</label>
+            <input type="text" name="clinicName" required><br>
 
-        <input disabled type="submit" id="add-clinic" value="Submit">
-    </form>
+            <input type="submit" id="action-submit" value="Submit">
+        </form>
 
-    <div class="quickstart-user-details-container">
+        <!-- Firebase Debug -->
+
         <button id="sign-out" name="signout">Sign Out</button>
-        Firebase sign-in status: <span id="sign-in-status">Unknown</span>
+
+        <div hidden class="quickstart-user-details-container">
+            Firebase sign-in status: <span id="sign-in-status">Unknown</span>
+        </div>
+
+        <div hidden>Firebase auth <code>currentUser</code> object value:
+            <pre><code id="quickstart-account-details">null</code></pre>
+        </div>
     </div>
-
-    <div>Firebase auth <code>currentUser</code> object value:</div>
-    <pre><code id="quickstart-account-details">null</code></pre>
-
 
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+    <script type="text/javascript" src="/script.js"></script>
 </body>
-
-<script type="text/javascript" src="/script.js"></script>
 
 </html>
