Implemented adding multiple clinics to doctors

--- a/backend/src/private/addDoctorToClinic.html
+++ b/backend/src/private/addDoctorToClinic.html
@@ -21,7 +21,7 @@
       <label for="male">Doctor ID:</label>
       <input type="text" name="doctorID" required /><br />
 
-      <input disabled type="submit" id="action-submit" value="Submit" />
+      <input disabled type="submit" class="action-submit" value="Submit" />
     </form>
 
     <!-- Firebase Debug -->
