--- a/backend/src/private/dashboard.html
+++ b/backend/src/private/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Create a Doctor Account</title>
+    <title>Trocaire Dashboard</title>
     <meta name="description" content="Creating an account for a doctor.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
