--- a/backend/src/private/login.html
+++ b/backend/src/private/login.html
@@ -15,7 +15,7 @@
 <body>
   <div class="login-wrap">
     <div class="login-container">
-      <h1>TROICAIRE ADMIN LOGIN</h1>
+      <h1>TROCAIRE ADMIN LOGIN</h1>
       <div class="input-wrap">
         <input type="text" id="email" name="email" placeholder="Email" />
       </div>
