Doctors are now admins and other minor style changes

--- a/backend/src/private/doctorSignup.html
+++ b/backend/src/private/doctorSignup.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="body-wrap">
-        <h1>Register a Doctor</h1><br />
+        <h1>Register a Doctor</h1>
         <form action="/api/createDoctor" method="post">
             <label for="firstName">First Name:</label>
             <input type="text" name="firstName" required /><br />
