--- a/backend/src/private/clinicSignup.html
+++ b/backend/src/private/clinicSignup.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="body-wrap">
-        <h1>Register a Clinic</h1><br />
+        <h1>Register a Clinic</h1>
         <form action="/api/createClinic" method="post">
             <label for="clinicName">Clinic Name:</label>
             <input type="text" name="clinicName" required><br>
