--- a/backend/src/private/dashboard.html
+++ b/backend/src/private/dashboard.html
@@ -29,6 +29,11 @@
         </a>
         <br />
 
+        <form action="/api/getDoctorID">
+            <input type="text" name="email">
+            <input type="submit" value="submit">
+        </form>
+
         <!-- Firebase Debug -->
         <hr>
         <button id="sign-out" name="signout">Sign Out</button>
