Updates to allow doctors to choose their own password and to invite other doctors to join the app

--- a/backend/src/private/dashboard.html
+++ b/backend/src/private/dashboard.html
@@ -16,6 +16,13 @@
 <body>
     <div id="body-wrap">
         <h1>Dashboard</h1>
+
+        <a href="/inviteDoctor">
+            <div class="action">
+                Invite a doctor
+            </div>
+        </a>
+
         <a href="/doctorSignup">
             <div class="action">
                 Register a doctor
