Move sign in to homepage and added option to join a clinic on the dashboard

--- a/backend/src/private/login.html
+++ b/backend/src/private/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
 
-  <title>Trocaire Admin Login</title>
+  <title>Trocaire Diabetes Login</title>
   <meta name="description" content="Creating an account for a doctor." />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,14 +15,15 @@
 <body>
   <div class="login-wrap">
     <div class="login-container">
-      <h1>TROCAIRE ADMIN LOGIN</h1>
+      <h1>TROCAIRE DIABETES LOGIN</h1>
       <div class="input-wrap">
         <input type="text" id="email" name="email" placeholder="Email" />
       </div>
       <div class="input-wrap">
         <input type="password" id="password" name="password" placeholder="Password" />
       </div>
-      <button id="sign-in" name="signin">Sign In</button>
+      <button id="sign-in" name="signin">Sign In</button><br />
+      <a href="/signup">Register an account</a>
     </div>
   </div>
 
