Initialise edit profile form with default details

--- a/backend/src/private/login.html
+++ b/backend/src/private/login.html
@@ -15,7 +15,8 @@
 <body>
   <div class="login-wrap">
     <div class="login-container">
-      <h1>TROCAIRE DIABETES LOGIN</h1>
+      <img src="/images/black-logo.png" height="30x" width="auto"><br />
+      <h2>Trocaire Diabetes Management Login</h2>
       <div class="input-wrap">
         <input type="text" id="email" name="email" placeholder="Email" />
       </div>
